--- a/docs/latex/tex/B_Requisitos.tex
+++ b/docs/latex/tex/B_Requisitos.tex
@@ -17,9 +17,9 @@ A continuación se enumeran los requisitos del proyecto extraídos de los genera
 \subsection{Requisitos funcionles}
 Cada uno de los requisitos funcionales tiene una correlación con la pantalla en la que se da la operatividad del mismo, excepto en los casos en las que este requerimiento abarca varias ventanas o que no es una funcionalidad con interfaz.
 
-Algunos de los requisitos funcionales, en el momento de ser tratados con el cliente, tuvieron apoyo de unos \emph{sketch} o bocetos conceptuales, con el fin de dar soporte, ayudar a comprender y facilitar la comunicación cliente - analista. Como podemos ver en la imagen~\ref{fig:bocetolog}, o en el apéndice de diseño~\pageref{diseño}.
+Algunos de los requisitos funcionales, en el momento de ser tratados con el cliente, tuvieron apoyo de unos \emph{sketch} o bocetos conceptuales, con el fin de dar soporte, ayudar a comprender y facilitar la comunicación cliente - analista. Como podemos ver en la imagen~\ref{fig:bocetolog}, o en el apéndice de diseño, ver página~\pageref{diseño}.
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[height=0.82\textwidth]{requisitos/bocetolog.jpeg}
 	\caption{Boceto sign in}\label{fig:bocetolog}
