--- a/docs/latex/tex/D_Manual_programador.tex
+++ b/docs/latex/tex/D_Manual_programador.tex
@@ -146,7 +146,6 @@ Al estar registrado con mi cuenta personal, tendría que dar permisos de adminis
 	\label{fig:firebaseconsole}
 \end{figure}
 
-\imagen{techprog/}{}
 
 \subsection{Play Store Console:}
 La consola de \href{https://play.google.com/apps}{Play Store} es la herramienta web que nos permite hacer el despliegue de la aplicación, hacer las pruebas alfa y beta, o para subirla y que todo el mundo se la pueda descargar.
@@ -228,7 +227,7 @@ Hay dos opciones para generar los ficheros, dependiendo del destino de cada uno 
 \section{Pruebas del sistema}
 Para validar el correcto funcionamiento del producto, se han realizado diferentes tipos de pruebas: unitarias, de integración y de sistema. Hay que destacar que Flutter tiene herramientas para la automatización de test,pero debido del tiempo de que se disponía para finalizar el proyecto, no se han realizado mediante estas, ya que no se pueden grabar los test como con \emph{Selenium}, por poner un ejemplo similar. 
 
-Es decir, se puede considerar como línea de trabajo futura, con metodologías de programación dirigida por los test, como es el caso de \empt{Test-Driven Development}.
+Es decir, se puede considerar como línea de trabajo futura, con metodologías de programación dirigida por los test, como es el caso de TDD  o \emph{Test Driven Development}.
 
 \subsection{Pruebas unitarias:}
 Se han realizado de forma simple o introduciendo impresiones explícitas en el propio código y mostrándolos por el terminal en tiempo de ejecución. En el caso de continuar con el desarrollo sería imprescindible trabajar con test automáticos. Han validado pequeños módulos o fragmentos de código, con el fin de garantizar de que estas pequeñas unidades funcionen. Uno de los ejemplos se encuentra en la figura~\ref{fig:impacto}:
